--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           webhook-url: ${{ secrets.WEBHOOK }}
           embed-title: ${{ github.event.release.name }}
-          embed-url: https://github.com/Whisky-App/Whisky/releases/download/${{ github.event.release.tag_name }}/Whisky.zip
+          embed-url: https://github.com/frankea/Whisky/releases/download/${{ github.event.release.tag_name }}/Whisky.zip
           embed-description: ${{ github.event.release.body }}
           embed-color: 9442302
 
@@ -22,5 +22,5 @@ jobs:
         uses: macauley/action-homebrew-bump-cask@v1
         with:
           token: ${{secrets.BREW_TOKEN}}
-          org: Whisky-App
+          org: frankea  # Your GitHub org/user
           cask: whisky
