--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -19,6 +19,9 @@ jobs:
         with:
           xcode-version: latest
 
+      - name: Install SwiftLint
+        run: brew install swiftlint
+
       - name: Build
         run: |
           xcodebuild -project Whisky.xcodeproj \
