ci: Install SwiftLint in GitHub Actions build workflow

--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -66,6 +66,9 @@ jobs:
         with:
           xcode-version: latest
 
+      - name: Install SwiftLint
+        run: brew install swiftlint
+
       - name: Build
         run: |
           xcodebuild -project Whisky.xcodeproj \
