--- a/.github/workflows/AutoAssign.yml
+++ b/.github/workflows/AutoAssign.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Assign to maintainers
-        uses: actions/github@v5
+        uses: actions/github-script@v7
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
@@ -20,5 +20,5 @@ jobs:
               owner: context.repo.owner,
               repo: context.repo.repo,
               issue_number: context.issue.number,
-              assignees: ['frankea']  // Replace with your GitHub username
+              assignees: ['afranke']
             })
