fix: Correct Dependabot directory for Swift Package Manager
The Package.swift manifest is located at WhiskyKit/Package.swift,
not the repository root. Updated directory from / to /WhiskyKit
so Dependabot can find and update Swift dependencies.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -13,9 +13,9 @@ updates:
       - "dependencies"
     open-pull-requests-limit: 5
     
-  # Maintain dependencies for Swift Package Manager
+  # Maintain dependencies for Swift Package Manager (WhiskyKit)
   - package-ecosystem: "swift"
-    directory: "/"
+    directory: "/WhiskyKit"
     schedule:
       interval: "weekly"
       day: "monday"
