fix: Use correct dependency-name format for Swift packages
For Swift Package Manager, dependency-name should be the package/repo name
'Sparkle' not the full GitHub path 'sparkle-project/Sparkle'.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -26,5 +26,5 @@ updates:
     open-pull-requests-limit: 5
     ignore:
       # Ignore patch versions for Sparkle to avoid noise
-      - dependency-name: "sparkle-project/Sparkle"
+      - dependency-name: "Sparkle"
         update-types: ["version-update:semver-patch"]
