fix: Correct Dependabot Swift config comments and remove ineffective ignore rule
- Updated comment to clarify that only WhiskyKit/Package.swift is tracked
- Explained that Xcode project-based SPM (Sparkle, etc.) is not supported by Dependabot
- Removed ineffective ignore rule for Sparkle (it's not in WhiskyKit's Package.swift)

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -13,7 +13,9 @@ updates:
       - "dependencies"
     open-pull-requests-limit: 5
     
-  # Maintain dependencies for Swift Package Manager (WhiskyKit)
+  # Maintain dependencies for WhiskyKit's standalone Swift package (WhiskyKit/Package.swift only)
+  # Note: Main Whisky project dependencies (Sparkle, etc.) are in Xcode project-based SPM
+  # which Dependabot doesn't support - only standalone Package.swift files are tracked
   - package-ecosystem: "swift"
     directory: "/WhiskyKit"
     schedule:
@@ -24,7 +26,3 @@ updates:
     labels:
       - "dependencies"
     open-pull-requests-limit: 5
-    ignore:
-      # Ignore patch versions for Sparkle to avoid noise
-      - dependency-name: "Sparkle"
-        update-types: ["version-update:semver-patch"]
