--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -22,8 +22,10 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
       
-      - name: Select Xcode version
-        run: sudo xcode-select -s /Applications/Xcode_16.2.app/Contents/Developer
+      - name: Setup Xcode
+        uses: maxim-lobanov/setup-xcode@v1
+        with:
+          xcode-version: latest-stable
       
       - name: Show Swift version
         run: swift --version
