--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -6,6 +6,10 @@ on:
   pull_request:
   workflow_dispatch:
 
+# Shared environment variables for consistency across jobs
+env:
+  XCODE_VERSION: '16.2'
+
 # Prevent duplicate runs on the same PR
 concurrency:
   group: ci-${{ github.event.pull_request.number || github.ref }}
@@ -40,7 +44,7 @@ jobs:
       - name: Setup Xcode
         uses: maxim-lobanov/setup-xcode@v1
         with:
-          xcode-version: latest-stable
+          xcode-version: ${{ env.XCODE_VERSION }}
 
       - name: Cache SPM Dependencies
         uses: actions/cache@v4
@@ -77,7 +81,7 @@ jobs:
       - name: Setup Xcode
         uses: maxim-lobanov/setup-xcode@v1
         with:
-          xcode-version: latest-stable
+          xcode-version: ${{ env.XCODE_VERSION }}
       
       - name: Cache SPM Dependencies
         uses: actions/cache@v4
