--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -56,7 +56,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-spm-
 
-      # Skip SwiftLint build phase in CI - handled by lint job
+      # SwiftLint build phase automatically skips when CI=true (set by GitHub Actions)
       - name: Build
         run: |
           xcodebuild -project Whisky.xcodeproj \
@@ -65,8 +65,7 @@ jobs:
             build \
             CODE_SIGN_IDENTITY="" \
             CODE_SIGNING_REQUIRED=NO \
-            CODE_SIGNING_ALLOWED=NO \
-            SKIP_SWIFTLINT_BUILD_PHASE=YES
+            CODE_SIGNING_ALLOWED=NO
 
   # Test job for WhiskyKit
   test:
