ci(workflows): trigger WhiskyKit test when CI workflow file changes

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -85,6 +85,7 @@ jobs:
           filters: |
             whiskykit:
               - 'WhiskyKit/**'
+              - '.github/workflows/CI.yml'
 
   # Test job for WhiskyKit - only runs when WhiskyKit files change
   test:
