ci(workflow): set XCODE_VERSION to 'latest-stable' in CI workflow

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -9,7 +9,7 @@ on:
 
 # Shared environment variables for consistency across jobs
 env:
-  XCODE_VERSION: '16.2'
+  XCODE_VERSION: 'latest-stable'
 
 # Prevent duplicate runs on the same PR
 concurrency:
