--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,4 +1,4 @@
 # These are supported funding model platforms
 
-ko_fi: isaacmarovitz
+github: frankea
 custom: ["https://ko-fi.com/gcenx", "https://www.codeweavers.com/store?ad=1010"]
