--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,5 +1,5 @@
 blank_issues_enabled: false
 contact_links:
-  - name: Discord Support
-    url: https://discord.gg/CsqAfs9CnM
-    about: Please ask for support first to confirm the issue before submitting a report.
+  - name: GitHub Issues
+    url: https://github.com/frankea/Whisky/issues
+    about: Search existing issues or open a new one for bug reports and feature requests.
