--- a/.github/workflows/AutoAssign.yml
+++ b/.github/workflows/AutoAssign.yml
@@ -20,5 +20,5 @@ jobs:
               owner: context.repo.owner,
               repo: context.repo.repo,
               issue_number: context.issue.number,
-              assignees: ['afranke']
+              assignees: ['frankea']
             })
