feat: Migrate distribution infrastructure to GitHub Pages and Releases
- Add DistributionConfig for centralized URL management
- Add WhiskyWineVersion struct with custom Codable implementation
- Refactor WhiskyWineDownloadView with improved error handling:
  - HTTP status code validation before decoding
  - Proper @MainActor thread safety
  - Cancellation error filtering
  - File move error propagation
  - Download speed calculation fix
- Add comprehensive test coverage (95 tests)
- Add RELEASE_WORKFLOW.md documentation
- Add appcast.xml template for Sparkle updates
- Update Info.plist with new appcast URL
- Add localized error messages

Fixes #31

--- a/Whisky/Info.plist
+++ b/Whisky/Info.plist
@@ -54,9 +54,9 @@
 		</dict>
 	</array>
 	<key>SUFeedURL</key>
-	<string>https://data.getwhisky.app/appcast.xml</string>
+	<string>https://frankea.github.io/Whisky/appcast.xml</string>
 	<key>SUPublicEDKey</key>
-	<string>tnZFAvPUfCpM7Tr7Sx5gKRm6BUQQ6htJQeOMP44evms=</string>
+	<string>REPLACE_WITH_YOUR_SPARKLE_EDDSA_PUBLIC_KEY</string>
 	<key>UTExportedTypeDeclarations</key>
 	<array>
 		<dict>
