--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -150,7 +150,19 @@ jobs:
           fi
         continue-on-error: true
       
-      - name: Upload Coverage Report
+      - name: Upload Coverage to Codecov
+        if: steps.coverage.outputs.has_coverage == 'true'
+        uses: codecov/codecov-action@v4
+        with:
+          files: WhiskyKit/coverage.lcov
+          flags: whiskykit
+          name: WhiskyKit-coverage
+          fail_ci_if_error: false
+          verbose: true
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+      
+      - name: Upload Coverage Report (Artifact)
         if: steps.coverage.outputs.has_coverage == 'true'
         uses: actions/upload-artifact@v4
         with:
