fix: Use consistent glob pattern for WhiskyKit paths in codecov.yml

--- a/codecov.yml
+++ b/codecov.yml
@@ -37,7 +37,7 @@ comment:
 flags:
   whiskykit:
     paths:
-      - WhiskyKit/Sources/
+      - WhiskyKit/Sources/**
     carryforward: true
 
 # Ignore paths from coverage calculation
