--- a/codecov.yml
+++ b/codecov.yml
@@ -13,6 +13,8 @@ coverage:
         threshold: 5%
         # Set coverage status to error if CI build fails
         if_ci_failed: error
+        # Only check files that have been uploaded
+        only_pulls: true
     # Per-patch (diff) coverage requirements
     patch:
       default:
@@ -45,6 +47,11 @@ ignore:
   - "WhiskyKit/Tests/**"
   - "**/*.generated.swift"
   - "**/Preview Content/**"
+
+# Path fixes for CI environment
+# Maps paths from CI build environment to repository paths
+fixes:
+  - "::WhiskyKit/"
 
 # Component definitions for better reporting
 component_management:
