--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -199,21 +199,19 @@ jobs:
             find .build/debug -type f -perm +111 2>/dev/null | head -20
           fi
       
-      - name: Upload Coverage to Codecov
-        if: steps.coverage.outputs.has_coverage == 'true'
+      - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v5
         with:
+          token: ${{ secrets.CODECOV_TOKEN }}
           files: WhiskyKit/coverage.lcov
           flags: whiskykit
-          name: WhiskyKit-coverage
           fail_ci_if_error: false
           verbose: true
-          # Use token for private repos or to avoid rate limiting
-          token: ${{ secrets.CODECOV_TOKEN }}
       
       - name: Upload Coverage Report (Artifact)
-        if: steps.coverage.outputs.has_coverage == 'true'
+        if: always()
         uses: actions/upload-artifact@v4
         with:
           name: coverage-report
           path: WhiskyKit/coverage.lcov
+          if-no-files-found: ignore
