docs: update repo for fork independence
- Add prominent fork disclaimer at top of README
- Download and store README screenshots locally (no longer depends on upstream)
- Replace Homebrew install instructions with manual download note
- Update bundle ID paths in docs (com.isaacmarovitz → com.franke)
- Add upstream issue reference clarification to troubleshooting docs
- Clarify Crowdin translation status in CONTRIBUTING.md
- Disable Homebrew cask update in Release workflow
- Add contributor attribution to FUNDING.yml

--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,4 +1,9 @@
-# These are supported funding model platforms
+# Funding for Whisky Fork
+#
+# This fork is maintained by @frankea
+# The custom links below support key community contributors whose work makes Whisky possible:
+# - Gcenx: Maintains Wine macOS builds and DXVK-macOS
+# - CodeWeavers: Develops CrossOver/Wine (affiliate link)
 
 github: frankea
 custom: ["https://ko-fi.com/gcenx", "https://www.codeweavers.com/store?ad=1010"]
